@@ -20,7 +20,7 @@ bl_info = {
 	"name": "BsMax",
 	"description": "BsMax for Blender 2.80 ~ 2.93",
 	"author": "Naser Merati (Nevil)",
-	"version": (0, 1, 0, 20210221),
+	"version": (0, 1, 0, 20210310),
 	"blender": (2, 80, 0),# 2.80~2.93
 	"location": "Almost Everywhere in Blender",
 	"wiki_url": "https://github.com/NevilArt/BsMax_2_80/wiki",
@@ -343,6 +343,7 @@ def load_preferences(preferences):
 class BsMax_OT_Save_Preferences(bpy.types.Operator):
 	bl_idname = "bsmax.save_preferences"
 	bl_label = "Save BsMax Preferences"
+	bl_options = {'REGISTER', 'INTERNAL'}
 	def execute(self, ctx):
 		save_preferences(addons[__name__].preferences)
 		return{"FINISHED"}
