@@ -15,21 +15,21 @@
 
 from .backburner import register_backburner, unregister_backburner
 # from .frames import register_frames, unregister_frames
-# from .proxy import register_proxy,unregister_proxy
 from .lightlister import register_lightlister,unregister_lightlister
 # from .menu import register_menu,unregister_menu
+from .preset import register_preset, unregister_preset
 # from .quick_render import register_quick_render,unregister_quick_render
 
 def register_render():
 	register_backburner()
-	# register_proxy()
 	register_lightlister()
 	# register_menu()
+	register_preset()
 	# register_quick_render()
 
 def unregister_render():
 	unregister_backburner()
-	# unregister_proxy()
 	unregister_lightlister()
 	# unregister_menu()
+	unregister_preset()
 	# unregister_quick_render()
