@@ -1,3 +1,6 @@
+# 0,1,0,20210221
+	"Overridelibrary" Driver Issue fixer applying for the whole scene automatically (Tools/Animation/Fix Override Driver Issue)
+
 # 0,1,0,20210219
 	Solve the Library override broken shapekey drivers (Tools/Animation/Fix Override Driver Issue).
 
